--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<header class="masthead bg-primary text-white text-center">
 		<div class="container d-flex align-items-center flex-column">
 			<!-- Masthead Avatar Image-->
-			<img class="masthead-avatar mb-5" src="/img/avataaars.svg"
+			<img class="masthead-avatar mb-5" src="./img/avataaars.svg"
 				alt="..." />
 			<!-- Masthead Heading-->
 			<h1 class="masthead-heading text-uppercase mb-0">KimJuYoon</h1>
@@ -97,7 +97,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="/img/portfolio/BoardList.png"
+						<img class="img-fluid" src="./img/portfolio/BoardList.png"
 							alt="..." />
 					</div>
 				</div>
@@ -113,7 +113,7 @@
 							</div>
 						</div>
 						<img class="img-fluid" style="margin-left: 70px"
-							src="/img/portfolio/sns.png" alt="..." />
+							src="./img/portfolio/sns.png" alt="..." />
 					</div>
 				</div>
 				<!-- Portfolio Item 3-->
@@ -127,7 +127,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="/img/portfolio/beat.png"
+						<img class="img-fluid" src="./img/portfolio/beat.png"
 							alt="..." />
 					</div>
 				</div>
@@ -142,7 +142,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="/img/portfolio/game.png"
+						<img class="img-fluid" src="./img/portfolio/game.png"
 							alt="..." />
 					</div>
 				</div>
@@ -157,7 +157,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="/img/portfolio/safe.png"
+						<img class="img-fluid" src="./img/portfolio/safe.png"
 							alt="..." />
 					</div>
 				</div>
@@ -172,7 +172,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="/img/portfolio/submarine.png"
+						<img class="img-fluid" src="./img/portfolio/submarine.png"
 							alt="..." />
 					</div>
 				</div>
@@ -214,25 +214,25 @@
 					</div>
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="/img/html_css_js1.png" class="d-block w-200"
+							<img src="./img/html_css_js1.png" class="d-block w-200"
 								alt="...">
 						</div>
 						<div class="carousel-item">
-							<img src="/img/Java2.png" class="d-block w-200"
+							<img src="./img/Java2.png" class="d-block w-200"
 								alt="...">
 						</div>
 						<div class="carousel-item">
-							<img src="/img/React1.png" class="d-block w-200"
+							<img src="./img/React1.png" class="d-block w-200"
 								alt="...">
 						</div>
 						<div class="carousel-item">
-							<img src="/img/git2.png" class="d-block w-200" alt="...">
+							<img src="./img/git2.png" class="d-block w-200" alt="...">
 						</div>
 						<div class="carousel-item">
-							<img src="/img/jsp1.png" class="d-block w-200" alt="...">
+							<img src="./img/jsp1.png" class="d-block w-200" alt="...">
 						</div>
 						<div class="carousel-item">
-							<img src="/img/Spring1.png" class="d-block w-200"
+							<img src="./img/Spring1.png" class="d-block w-200"
 								alt="...">
 						</div>
 					</div>
@@ -401,7 +401,7 @@
 								</div>
 								<!-- Portfolio Modal - Image-->
 								<img class="img-fluid rounded mb-5"
-									src="/img/portfolio/BoardList.png" alt="..." />
+									src="./img/portfolio/BoardList.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
 								<p class="mb-4">게시판 프로젝트입니다.</p>
 								<a href="https://github.com/Kim-Ju-Yoon/Myblogfile"
@@ -445,7 +445,7 @@
 								</div>
 								<!-- Portfolio Modal - Image-->
 								<img class="img-fluid rounded mb-5"
-									src="/img/portfolio/sns.png" alt="..." />
+									src="./img/portfolio/sns.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
 								<p class="mb-4">SNS 로그인 및 회원가입 프로젝트입니다.</p>
 								<a href="https://github.com/Jinny0609/Green-Marsh-tit.git"
@@ -489,7 +489,7 @@
 								</div>
 								<!-- Portfolio Modal - Image-->
 								<img class="img-fluid rounded mb-5"
-									src="/img/portfolio/beat.png" alt="..." />
+									src="./img/portfolio/beat.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
 								<p class="mb-4">라즈베리파이를 이용한 실시간 대시보드 프로젝트입니다.</p>
 								<a href="https://github.com/Jinny0609/heartbeat.git"
@@ -532,7 +532,7 @@
 								</div>
 								<!-- Portfolio Modal - Image-->
 								<img class="img-fluid rounded mb-5"
-									src="/img/portfolio/game.png" alt="..." />
+									src="./img/portfolio/game.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
 								<p class="mb-4">Lorem ipsum dolor sit amet, consectetur
 									adipisicing elit. Mollitia neque assumenda ipsam nihil,
@@ -576,7 +576,7 @@
 								</div>
 								<!-- Portfolio Modal - Image-->
 								<img class="img-fluid rounded mb-5"
-									src="/img/portfolio/safe.png" alt="..." />
+									src="./img/portfolio/safe.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
 								<p class="mb-4">Lorem ipsum dolor sit amet, consectetur
 									adipisicing elit. Mollitia neque assumenda ipsam nihil,
@@ -619,7 +619,7 @@
 								</div>
 								<!-- Portfolio Modal - Image-->
 								<img class="img-fluid rounded mb-5"
-									src="/img/portfolio/submarine.png" alt="..." />
+									src="./img/portfolio/submarine.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
 								<p class="mb-4">Lorem ipsum dolor sit amet, consectetur
 									adipisicing elit. Mollitia neque assumenda ipsam nihil,
