--- a/index.html
+++ b/index.html
@@ -534,11 +534,11 @@
 								<img class="img-fluid rounded mb-5"
 									src="./img/portfolio/game.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
-								<p class="mb-4">Lorem ipsum dolor sit amet, consectetur
-									adipisicing elit. Mollitia neque assumenda ipsam nihil,
-									molestias magnam, recusandae quos quis inventore quisquam velit
-									asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-									itaque. Nam.</p>
+								<p class="mb-4">프로젝트입니다.</p>
+								<a href="#"
+									class="btn btn-primary"> <i
+									class="bi bi-file-earmark-minus"></i> 깃 허브 이동하기
+								</a>
 								<button class="btn btn-primary" data-bs-dismiss="modal">
 									<i class="fas fa-xmark fa-fw"></i> Close Window
 								</button>
@@ -578,11 +578,11 @@
 								<img class="img-fluid rounded mb-5"
 									src="./img/portfolio/safe.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
-								<p class="mb-4">Lorem ipsum dolor sit amet, consectetur
-									adipisicing elit. Mollitia neque assumenda ipsam nihil,
-									molestias magnam, recusandae quos quis inventore quisquam velit
-									asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-									itaque. Nam.</p>
+								<p class="mb-4">프로젝트입니다.</p>
+								<a href="#"
+									class="btn btn-primary"> <i
+									class="bi bi-file-earmark-minus"></i> 깃 허브 이동하기
+								</a>
 								<button class="btn btn-primary" data-bs-dismiss="modal">
 									<i class="fas fa-xmark fa-fw"></i> Close Window
 								</button>
@@ -621,11 +621,11 @@
 								<img class="img-fluid rounded mb-5"
 									src="./img/portfolio/submarine.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
-								<p class="mb-4">Lorem ipsum dolor sit amet, consectetur
-									adipisicing elit. Mollitia neque assumenda ipsam nihil,
-									molestias magnam, recusandae quos quis inventore quisquam velit
-									asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-									itaque. Nam.</p>
+								<p class="mb-4">프로젝트입니다.</p>
+								<a href="#"
+									class="btn btn-primary"> <i
+									class="bi bi-file-earmark-minus"></i> 깃 허브 이동하기
+								</a>
 								<button class="btn btn-primary" data-bs-dismiss="modal">
 									<i class="fas fa-xmark fa-fw"></i> Close Window
 								</button>
