--- a/index.html
+++ b/index.html
@@ -403,7 +403,14 @@
 								<img class="img-fluid rounded mb-5"
 									src="./img/portfolio/BoardList.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
-								<p class="mb-4">게시판 프로젝트입니다.</p>
+								<div class="mb-4">
+									<div class="mb-6">
+									<h5>개발 환경</h5>Eclipse,JSP,Css,Js,Spring Framework,Mysql<br>
+									<h5>프로젝트 소개</h5>게시판 기능 구현<br>
+									<h5>기능 구현</h5>게시판 목록,글 작성,글 수정,댓글달기,페이징,서칭<br>
+									<h5>기여도</h5>개인 프로젝트
+									</div>
+								</div>
 								<a href="https://github.com/Kim-Ju-Yoon/Myblogfile"
 									class="btn btn-primary"> <i
 									class="bi bi-file-earmark-minus"></i> 깃 허브 이동하기
@@ -447,7 +454,14 @@
 								<img class="img-fluid rounded mb-5"
 									src="./img/portfolio/sns.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
-								<p class="mb-4">SNS 로그인 및 회원가입 프로젝트입니다.</p>
+								<div class="mb-4">
+									<div class="mb-6">
+									<h5>개발 환경</h5>Eclipse,JSP,Css,Js,Spring Framework,SNS API(REST API),Mysql<br>
+									<h5>프로젝트 소개</h5>SNS연동 회원가입 및 로그인,로그아웃(팀 프로젝트)<br>
+									<h5>기능 구현</h5>SNS 연동 로그인 로그아웃(네이버,카카오,구글),메인 서비스(로그인,로그아웃,회원가입),비밀번호 찾기,가져 온 회원정보 표기<br>
+									<h5>기여도</h5>kakao연동 로그인, 메인 페이지 회원가입(로그인,로그아웃),아이디 기억하기
+									</div>
+								</div>
 								<a href="https://github.com/Jinny0609/Green-Marsh-tit.git"
 									class="btn btn-primary"> <i
 									class="bi bi-file-earmark-minus"></i> 깃 허브 이동하기
@@ -491,7 +505,16 @@
 								<img class="img-fluid rounded mb-5"
 									src="./img/portfolio/beat.png" alt="..." />
 								<!-- Portfolio Modal - Text-->
-								<p class="mb-4">라즈베리파이를 이용한 실시간 대시보드 프로젝트입니다.</p>
+								<div class="mb-4">
+									<div class="mb-6">
+									<h5>개발 환경</h5>Html,Css,Js,Python,Flask,Raspberry Pi,Mysql<br>
+									<h5>프로젝트 소개</h5>실시간 대시보드(팀 프로젝트)<br>
+									<h5>기능 구현</h5>생체 데이터 수집,실시간 차트,데이터 베이스 기록<br>
+									<h5>기여도</h5>라즈베리 파이를 사용한 생체 데이터 수집,실시간 차트표시를 위한 js 작성<br>
+									*스마트 워치를 사용한 생체 데이터 수집을 활용하려 했으나 실시간으로 데이터를 전송받는 어플 개발이 필요했고 기간안에 하기 어려워 라즈베리파이로 데이터 수집방법을 바꿈
+									또한 수집한 데이터를 이용해 자동 신고 시스템을 만들려고 했으나 미구현 많은 아쉬움이 남음*
+									</div>
+								</div>
 								<a href="https://github.com/Jinny0609/heartbeat.git"
 									class="btn btn-primary"> <i
 									class="bi bi-file-earmark-minus"></i> 깃 허브 이동하기
