--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<img class="masthead-avatar mb-5" src="./img/avataaars.svg"
 				alt="..." />
 			<!-- Masthead Heading-->
-			<h1 class="masthead-heading text-uppercase mb-0">KimJuYoon</h1>
+			<h1 class="masthead-heading text-uppercase mb-0">Kim Ju Yoon</h1>
 			<!-- Icon Divider-->
 			<div class="divider-custom divider-light">
 				<div class="divider-custom-line"></div>
@@ -351,14 +351,12 @@
 				<!-- Footer Social Icons-->
 				<div class="col-lg-4 mb-5 mb-lg-0">
 					<h4 class="text-uppercase mb-4">Around the Web</h4>
-					<a class="btn btn-outline-light btn-social mx-1" href="#!"><i
-						class="fab fa-fw fa-facebook-f"></i></a> <a
-						class="btn btn-outline-light btn-social mx-1" href="#!"><i
-						class="fab fa-fw fa-twitter"></i></a> <a
-						class="btn btn-outline-light btn-social mx-1" href="#!"><i
-						class="fab fa-fw fa-linkedin-in"></i></a> <a
-						class="btn btn-outline-light btn-social mx-1" href="#!"><i
-						class="fab fa-fw fa-dribbble"></i></a>
+					<a class="btn btn-outline-light btn-social mx-1" href="https://codingstory2.tistory.com/" target="_blank">
+						<i class="bi bi-bootstrap"></i></a>
+						<a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/ju_yoon_k/" target="_blank">
+						<i class="bi bi-instagram"></i></a> 
+						<a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Kim-Ju-Yoon" target="_blank">
+						<i class="bi bi-github"></i></a>
 				</div>
 				<!-- Footer About Text-->
 				<div class="col-lg-4">
