--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="container">
 			<a class="navbar-brand" href="#page-top">JuYoon</a>
 			<button
-				class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded"
+				class="navbar-toggler text-uppercase font-weight-bold bg-primary2 text-white rounded"
 				type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
 				aria-expanded="false" aria-label="Toggle navigation">
@@ -157,7 +157,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="./img/portfolio/safe.png"
+						<img class="img-fluid" srbg-pric="./img/portfolio/safe.png"
 							alt="..." />
 					</div>
 				</div>
@@ -180,7 +180,7 @@
 		</div>
 	</section>
 	<!-- About Section-->
-	<section class="page-section bg-primary text-white mb-0" id="about">
+	<section class="page-section bg-primary2 text-white mb-0" id="about">
 		<div class="container">
 			<!-- About Section Heading-->
 			<h2
