--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" srbg-pric="./img/portfolio/safe.png"
+						<img class="img-fluid" src="./img/portfolio/safe.png"
 							alt="..." />
 					</div>
 				</div>
