--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					</div>
 				</div>
 				<!-- Portfolio Item 4-->
-				<div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+				<!-- <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
 					<div class="portfolio-item mx-auto" data-bs-toggle="modal"
 						data-bs-target="#portfolioModal4">
 						<div
@@ -145,9 +145,9 @@
 						<img class="img-fluid" src="./img/portfolio/game.png"
 							alt="..." />
 					</div>
-				</div>
+				</div> -->
 				<!-- Portfolio Item 5-->
-				<div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+				<!-- <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
 					<div class="portfolio-item mx-auto" data-bs-toggle="modal"
 						data-bs-target="#portfolioModal5">
 						<div
@@ -160,9 +160,9 @@
 						<img class="img-fluid" src="./img/portfolio/safe.png"
 							alt="..." />
 					</div>
-				</div>
+				</div> -->
 				<!-- Portfolio Item 6-->
-				<div class="col-md-6 col-lg-4">
+				<!-- <div class="col-md-6 col-lg-4">
 					<div class="portfolio-item mx-auto" data-bs-toggle="modal"
 						data-bs-target="#portfolioModal6">
 						<div
@@ -175,7 +175,7 @@
 						<img class="img-fluid" src="./img/portfolio/submarine.png"
 							alt="..." />
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
